ingress-multiplesvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-svc
  namespace: nginx-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-app
  type: ClusterIP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress
  namespace: nginx-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx.harishdevops-training.in
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: nginx-app-svc
              port:
                number: 80
          path: /

  - host: nginx1.harishdevops-training.in
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-app-svc1
            port:
              number: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app1
  namespace: nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
      - name: nginx-app1
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-svc1
  namespace: nginx-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-app1
  type: ClusterIP
