test-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-svc
  namespace: development
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-app
  type: ClusterIP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: example.com
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: nginx-app-svc
              port:
                number: 80
          path: /
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment
  namespace: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx
        ports:
        - containerPort: 80
